<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orio_magni_ff_server</name>
  <version>1.0.0</version>
  <description>Free fleet server for Magni robot and Orio PLC</description>
  <maintainer email="nicholasgan@openrobotics.org">Nicholas Gan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>free_fleet_server_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
