<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orio_magni_worlds</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nicholasgan@openrobotics.org">Nicholas Gan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_traffic_ros2</exec_depend>
  <exec_depend>rmf_task_ros2</exec_depend>
  <exec_depend>rmf_fleet_adapter</exec_depend>
  <exec_depend>orio_adapter</exec_depend>
  <exec_depend>orio_manager_ros2</exec_depend>
  <exec_depend>rmf_building_map_tools</exec_depend>
  <exec_depend>rmf_gym_tools</exec_depend>

  <exec_depend>orio_adapter</exec_depend>
  <exec_depend>orio_manager_ros2</exec_depend>
  <exec_depend>orio_magni_ff_server</exec_depend>

  <exec_depend>rmf_building_sim_gazebo_plugins</exec_depend>

  <exec_depend>rmf_visualization</exec_depend>

  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rmf_demos_assets</exec_depend>
  <exec_depend>rmf_robot_sim_gazebo_plugins</exec_depend>
  <exec_depend>rmf_demos_tasks</exec_depend>
  <exec_depend>rmf_demos_panel</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
